# salep

./: .gitignore  README.md  license.txt  pyproject.toml
design-salep/chi_ti_t_tham_gia_giao_di_n_m_i/: code.html
design-salep/danh_s_ch_i_m_b_n_giao_di_n_m_i/: code.html
design-salep/field_force_direct/: DESIGN.md
design-salep/h_s_c_a_t_i_giao_di_n_m_i/: code.html
design-salep/ng_k_ch_ng_tr_nh_giao_di_n_m_i/: code.html
design-salep/t_o_i_m_tr_ng_b_y_giao_di_n_m_i/: code.html
design-salep/trang_ch_giao_di_n_m_i/: code.html
design-salep/vibrant_professionalism/: DESIGN.md
doc/: 01_business_model.md  02_doctype_blueprint.md  03_permission_matrix.md  04_workflow_blueprint.md  05_integration_plan.md  06_fixtures_plan.md  07_api_contract_dashboard.md
salep/: hooks.py  install.py  modules.txt  patches.txt
salep/api/: dashboard.py  participation.py  point.py  portal.py  profile.py
salep/display_point/doctype/display_participation/: display_participation.json  display_participation.py
salep/display_point/doctype/display_point/: display_point.json  display_point.py
salep/display_point/doctype/display_visit/: display_visit.json  display_visit.py
salep/display_point/doctype/promotion_program/: promotion_program.json  (+1 more)
salep/patches/v0_0_1/: add_db_indexes.py  create_default_roles.py  setup_workflow.py
salep/patches/v0_0_2/: normalize_state.py  refresh_workflow.py
salep/patches/v0_0_3/: add_perf_indexes.py
salep/public/salep/: shell.css  shell.js
salep/www/: dp.html  dp.py
tools/claude-skills/: README.md  environment-setup-script.sh  pull-skills.sh
(+23 files in other folders)
