[project]
name = "salep"
authors = [
    { name = "Chien", email = "mrhuychien@gmail.com" },
]
description = "Quản lý Điểm Trưng Bày (display_point) cho RVHG trên ERPNext v16"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "salep"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"
